PR symtab/17855

gdb/ChangeLog:

	PR symtab/17855
	* symfile.c (clear_symtab_users): Move call to breakpoint_re_set
	to end.